<resources>
    <string name="app_name">P3LightBender</string>
    <string name="no_light_sensor_text">You do not have a light-sensor</string>
    <string name="below_you_can_adjust_your_screens_brightness_text">Below you can adjust your screens brightness</string>
    <string name="welcome_text">Welcome!</string>
    <string name="system_brightness_text">System brightness</string>
    <string name="window_brightness_text">Window brightness</string>
    <string name="automatic_text">Automatic</string>
    <string name="very_dark_text">Very dark</string>
    <string name="quite_dark_text">Quite dark</string>
    <string name="normal_text">Normal</string>
    <string name="quite_bright_text">Quite bright</string>
    <string name="very_bright_text">Very bright</string>

    <string name="send_s_o_s_morse_message_text">Send S.O.S. morse message</string>
    <string name="send_s_o_s_text">Send S.O.S.</string>
    <string name="stop_s_o_s_text">Stop S.O.S.</string>
    <string name="send_custom_morse_message_text">Send custom morse message</string>
    <string name="custom_message_text">Custom message</string>

</resources>
